crates/analyzer/tests/snapshots/errors__duplicate_var_in_child_scope.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: duplicate variable definition
  ┌─ compile_errors/duplicate_var_in_child_scope.fe:4:13
  │
4 │         let sum: u256 = 0
  │             ^^^ `sum` first defined here
5 │         for i in my_array:
6 │             let sum: u256 = 0
  │                 --- `sum` redefined here


